[package]
name = "pricelocker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pricelocker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
pyth-sdk = "0.8.0"
pyth-sdk-solana = "0.9.0"
anchor-spl = { version = "0.29.0", features = ["token"] }